# derive-wizard

./: .gitignore  Cargo.toml  EXPERIMENT_RESULTS.md  PTY_IMPLEMENTATION_SUMMARY.md  PTY_WORKAROUND_SOLUTION.md  README.md  README_PTY_SOLUTION.md  TESTING_WITH_PTY.md  form.typ  migrate_to_dialoguer.md  questions.md  spooky_forest_form.tex  todo.md
derive-dialoguer-wizard/: Cargo.toml
derive-dialoguer-wizard/examples/: basic_fields.rs  enum_oneof.rs  magic_forest.rs  masked_input.rs  min_max_bounds.rs  multiline_text.rs  multiselect.rs  nested_struct.rs  optional_fields.rs  prelude_epilogue.rs  simple.rs  validation.rs  vec_lists.rs
derive-dialoguer-wizard/src/: backend.rs
derive-egui-form/: Cargo.toml
derive-egui-form/examples/: basic_fields.rs  enum_oneof.rs  magic_forest.rs  masked_input.rs  min_max_bounds.rs  multi_select.rs  multiline_text.rs  multiselect.rs  nested_struct.rs  nested_structs.rs  optional_fields.rs  prelude_epilogue.rs  simple.rs  suggestions.rs  validation.rs  vec_lists.rs
derive-egui-form/src/: backend.rs
derive-html-document/: Cargo.toml
derive-html-document/examples/: magic_forest.rs  simple.rs
derive-html-document/src/: generator.rs  lib.rs
derive-latex-document/: Cargo.toml
derive-latex-document/examples/: latex_spooky_forest.rs
derive-latex-document/src/: lib.rs
derive-ratatui-wizard/: Cargo.toml
derive-ratatui-wizard/examples/: basic_fields.rs  (+14 more)
derive-requestty-wizard/: Cargo.toml
derive-survey/: Cargo.toml
derive-survey-macro/: Cargo.toml
derive-wizard/: Cargo.toml  README.md
derive-wizard-macro/: Cargo.toml
derive-wizard-types/: Cargo.toml
derive-wizard/examples/: assumptions.rs  builder_api.rs  builder_comprehensive.rs  builder_egui.rs  complex_mortgage_application.rs  complex_mortgage_application_backup.rs  deeply_nested.rs  defaults_demo.rs  description_demo.rs  dialoguer_backend.rs  dialoguer_backend_password.rs  dialoguer_backend_suggestions.rs  dialoguer_defaults_demo.rs  dialoguer_demo.rs  dialoguer_password_demo.rs  editor.rs  egui_backend.rs  egui_backend_assumptions_and_suggestions.rs  egui_backend_suggestions.rs  egui_defaults_demo.rs  egui_demo.rs  enum_gender.rs  enum_transport.rs  nested_enum_payment.rs  password_masking.rs  rental_application.rs  showcase.rs  struct_with_enum_inspect.rs  test_dialoguer.rs  test_enum_input.rs  test_nested_field.rs  test_user_input.rs  validation.rs
derive-wizard/examples/advanced/: enum_structure.rs
derive-wizard/examples/backends/: dialoguer.rs  dialoguer_multi_select.rs  dialoguer_password.rs  dialoguer_suggestions.rs  dialoguer_validation.rs  egui.rs  egui_assumptions_and_suggestions.rs  egui_multi_select.rs  egui_suggestions.rs  egui_validation.rs  ratatui.rs  ratatui_job_application.rs  ratatui_multi_select.rs  ratatui_pizza.rs  ratatui_server_config.rs  requestty_multi_select.rs  typst_multi_select.rs
derive-wizard/examples/builders/: builder_api.rs  builder_comprehensive.rs  builder_egui.rs
derive-wizard/examples/features/: assumptions.rs  egui_nested_validation.rs  nested_validation.rs  suggestions.rs  typst_form.rs
derive-wizard/src/: answer.rs  backend.rs  dialoguer_backend.rs  egui_backend.rs  field_path.rs  lib.rs  requestty_backend.rs  typst_form.rs
derive-wizard/src/backend/: dialoguer_backend.rs  egui_backend.rs  ratatui_backend.rs  requestty_backend.rs  typst_backend.rs
derive-wizard/tests/: dialoguer_pty_test.rs  pty_tests.rs  wizard_derive.rs  wizard_tests.rs
docs/: architecture.md  current_architecture.md  new-architecture.md
elicitor/: Cargo.toml
elicitor-doc-html/: Cargo.toml
elicitor-doc-html/examples/: html_basic_fields.rs  html_enum_oneof.rs  html_job_application.rs  html_masked_input.rs  html_min_max_bounds.rs  html_multiline_text.rs  html_multiselect.rs  html_nested_struct.rs  html_optional_fields.rs  html_prelude_epilogue.rs  html_sandwich.rs  html_simple.rs  html_spooky_forest.rs  html_suggestions.rs  html_validation.rs  html_vec_lists.rs
elicitor-doc-html/src/: generator.rs  lib.rs
elicitor-doc-latex/: Cargo.toml
elicitor-doc-latex/examples/: latex_spooky_forest.rs
elicitor-doc-latex/src/: lib.rs
elicitor-form-egui/: Cargo.toml
elicitor-form-ratatui/: Cargo.toml
elicitor-form-ratatui/examples/: ratatui_form_basic_fields.rs  ratatui_form_enum_oneof.rs  ratatui_form_job_application.rs  ratatui_form_masked_input.rs  ratatui_form_min_max_bounds.rs  ratatui_form_multiline_text.rs  ratatui_form_multiselect.rs  ratatui_form_nested_struct.rs  ratatui_form_optional_fields.rs  ratatui_form_prelude_epilogue.rs  ratatui_form_sandwich.rs  ratatui_form_simple.rs  ratatui_form_spooky_forest.rs  ratatui_form_suggestions.rs  ratatui_form_validation.rs  ratatui_form_vec_lists.rs
elicitor-form-ratatui/src/: backend.rs  lib.rs
elicitor-macro/: Cargo.toml
elicitor-types/: Cargo.toml
elicitor-wizard-dialoguer/: Cargo.toml
elicitor-wizard-ratatui/: Cargo.toml
elicitor-wizard-ratatui/examples/: ratatui_basic_fields.rs  ratatui_enum_oneof.rs  ratatui_job_application.rs  ratatui_masked_input.rs  ratatui_min_max_bounds.rs  ratatui_multiline_text.rs  ratatui_multiselect.rs  ratatui_nested_struct.rs  ratatui_optional_fields.rs  ratatui_prelude_epilogue.rs  ratatui_sandwich.rs  ratatui_simple.rs  ratatui_spooky_forest.rs  ratatui_suggestions.rs  ratatui_validation.rs  ratatui_vec_lists.rs
elicitor-wizard-ratatui/src/: backend.rs  lib.rs
elicitor-wizard-requestty/: Cargo.toml
elicitor-wizard-requestty/examples/: requestty_basic_fields.rs  requestty_enum_oneof.rs  requestty_job_application.rs  requestty_masked_input.rs  requestty_min_max_bounds.rs  requestty_multiline_text.rs  requestty_multiselect.rs  requestty_nested_struct.rs  requestty_optional_fields.rs  requestty_prelude_epilogue.rs  requestty_sandwich.rs  requestty_simple.rs  requestty_spooky_forest.rs  requestty_suggestions.rs  requestty_validation.rs  requestty_vec_lists.rs
elicitor-wizard-requestty/src/: backend.rs  lib.rs
elicitor/src/: lib.rs  test_backend.rs
elicitor/tests/: integration.rs
example-surveys/: Cargo.toml
example-wizard/: Cargo.toml
(+113 files in other folders)
