[workspace]

resolver = "3"

default-members = ["elicitor"]

members = [
    "elicitor",
    "elicitor-types",
    "elicitor-macro",
    "elicitor-wizard-dialoguer",
    "elicitor-wizard-requestty",
    "elicitor-wizard-ratatui",
    "elicitor-form-ratatui",
    "elicitor-form-egui",
    "elicitor-doc-latex",
    "elicitor-doc-html",
    "example-surveys",
]
