[package]
name = "derive-html-document"
version = "0.1.0"
edition = "2024"
description = "HTML document generator for derive-survey (generates fillable HTML forms)"
license = "MIT OR Apache-2.0"

[dependencies]
derive-survey = { path = "../derive-survey" }
anyhow = "1"

[dev-dependencies]
example-surveys = { path = "../example-surveys" }
