[package]
name = "derive-latex-document"
version = "0.1.0"
edition = "2021"
description = "Backend for derive-survey: generates fillable LaTeX forms from SurveyDefinition."

[dependencies]
derive-survey = { path = "../derive-survey" }

[dev-dependencies]
example-surveys = { path = "../example-surveys" }
anyhow = "1"
