[package]
name = "derive-wizard"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-wizard-macro = { path = "../derive-wizard-macro" }
derive-wizard-types = { path = "../derive-wizard-types" }
requestty = "0.6.3"
thiserror = "2.0"
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true }

[features]
default = []
egui-backend = ["egui", "eframe"]

[[example]]
name = "egui_demo"
required-features = ["egui-backend"]
