[package]
name = "derive-wizard"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/barafael/derive-wizard"
license = "MIT OR Apache-2.0"
description = "Derives interactive wizard-like user input for Rust types. Backend-agnostic (supports at least requestty and egui)."

[dependencies]
derive-wizard-macro = { version = "0.4", path = "../derive-wizard-macro" }
derive-wizard-types = { version = "0.4", path = "../derive-wizard-types" }
requestty = { version = "0.6", optional = true }
thiserror = "2"
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true }
dialoguer = { version = "0.11", optional = true }

[features]
default = ["requestty-backend"]
requestty-backend = ["requestty"]
egui-backend = ["egui", "eframe"]
dialoguer-backend = ["dialoguer"]

[[example]]
name = "egui_backend"
required-features = ["egui-backend"]

[[example]]
name = "egui_backend_suggestions"
required-features = ["egui-backend"]

[[example]]
name = "egui_backend_assumptions_and_suggestions"
required-features = ["egui-backend"]

[[example]]
name = "dialoguer_backend"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_backend_suggestions"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_backend_password"
required-features = ["dialoguer-backend"]

[[example]]
name = "builder_egui"
required-features = ["egui-backend"]
