[package]
name = "elicitor-form-ratatui"
version = "0.1.0"
edition = "2024"
description = "Ratatui form backend for elicitor (TUI form with all fields visible)"
license = "MIT OR Apache-2.0"

[dependencies]
elicitor = { path = "../elicitor" }
ratatui = "0.30"
crossterm = "0.29"
thiserror = "2"

[dev-dependencies]
anyhow = "1"
example-surveys = { path = "../example-surveys" }
